--- a/melos.yaml
+++ b/melos.yaml
@@ -5,21 +5,21 @@ packages:
 
 scripts:
   analyze:
-    run: melos exec -- "flutter analyze"
+    run: dart run melos exec -- "flutter analyze"
     description: Analyze all packages
 
   clean:
-    run: melos exec -- "flutter clean"
+    run: dart run melos exec -- "flutter clean"
     description: Clean all packages
 
   build-gen:
-    run: melos exec -- "dart run build_runner build --delete-conflicting-outputs"
+    run: dart run melos exec -- "dart run build_runner build --delete-conflicting-outputs"
     description: Run build generator for all packages
 
   test:
-    run: melos exec --dir-exists=test -- "flutter test --coverage"
+    run: dart run melos exec --dir-exists=test -- "flutter test --coverage"
     description: Run tests for all packages
 
   pub-get:
-    run: melos exec -- "flutter pub get"
+    run: dart run melos exec -- "flutter pub get"
     description: Run pub get for all packages
