--- a/packages/apidash_core/pubspec.yaml
+++ b/packages/apidash_core/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   curl_parser:
     path: ../curl_parser
   freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
   har:
     path: ../har
   insomnia_collection:
